# pipable

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  prebuild.sh  publish.sh  pump.py  pump_version.py  pyproject.toml  pytest.ini  test_pipable.py
.github/workflows/: ci.yml
assets/: coverage-report.xml
assets/coverage/: d_a44f0ac069e85531_test_pipable_py.html  d_f900dd2e68629e1c___init___py.html  index.html  pump_py.html  status.json  test_pipable_py.html
changelog/: index.html
contribute/: index.html
docs/: reference.md
docs/assets/: coverage-report.xml
docs/assets/coverage/: d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_destructure_py.html  d_a44f0ac069e85531_test_pipable_py.html  d_a44f0ac069e85531_test_pump_py.html  d_f900dd2e68629e1c___init___py.html  index.html  pump_py.html  status.json
license/: index.html
pipable/: __init__.py
reference/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_destructure.py  test_pipable.py  test_pump.py
