[tool.poetry]
name = "pipable"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
pytest = "^7.2.1"
coverage = "^7.1.0"
black = "^22.12.0"
mkdocs-material = "^9.0.9"
mkdocstrings = "^0.20.0"
genbadge = "^1.1.0"
ipykernel = "^6.20.2"


[tool.poetry.group.dev]
optional = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
